--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 			<!-- Full-width images with number and caption text -->
 			<div class="mySlides">
 				<h1>The Three Waves of Autocratization: Wave 1</h1>
+				<p style="margin:3px">Click on the vertices of the chart for more information!</p>
 			</div>
 			<div class="mySlides">
 				<h1>The Three Waves of Autocratization: Wave 2</h1>
+				<p style="margin:3px">Click on the vertices of the chart for more information!</p>
 			</div>
 			<div class="mySlides">
 				<h1>The Three Waves of Autocratization: Wave 3</h1>
+				<p style="margin:3px">Click on the vertices of the chart for more information!</p>
 			</div>
 			<div class="mySlides">
 				<h1>The Three Waves of Autocratization: Explore</h1>
+				<p style="margin:3px">Click on the vertices of the chart for more information!</p>
 			</div>
 		</div>
 
@@ -69,24 +73,19 @@
 			opacity: 1;
 		}
 	</style>
+
 	<div id="container">
-		<div style="text-align:left">
-			<span class="prev" id="prev" onclick="plusSlides(-1)" hidden="hidden">&#10096;</span>
+		<div id="container_checks" style="text-align:left">
+			<span class="prev" style="font-size: 70px;" id="prev" onclick="plusSlides(-1)" hidden="hidden">&#10096;</span>
 		</div>
 		<div id="my_dataviz"></div>
 		<div id ="year_clicked" hidden="hidden"></div>
 		<div id="region_checks" hidden="hidden"></div>
 		<div>
-			<span class="next" id="next" onclick="plusSlides(1)">&#10097;</span>
+			<span class="next" style="font-size: 70px;" id="next" onclick="plusSlides(1)">&#10097;</span>
 		</div>
 	</div>
-	 <!-- The dots/circles -->
-	<div id="scene_select" style="text-align:center">
-		<span class="dot" onclick="currentSlide(1)"></span>
-		<span class="dot" onclick="currentSlide(2)"></span>
-		<span class="dot" onclick="currentSlide(3)"></span>
-		<span class="dot" onclick="currentSlide(4)"></span>
-	</div>
+
 	<script>
 		var slider = document.getElementById("myRange");
 		var output = document.getElementById("year_selected");
@@ -135,7 +134,6 @@
 		async function wave_one() {
 			document.getElementById("prev").setAttribute("hidden", "hidden");
 			document.getElementById("next").setAttribute("hidden", "hidden");
-			document.getElementById("scene_select").setAttribute("hidden", "hidden");
 			document.getElementById("year_selected").innerHTML = 1900;
 			slider.value = 1900;
 			for (let i = 0; i <= 41; i++) {
@@ -171,14 +169,11 @@
 				.style('box-shadow', '10px 5px 5px gray')
 				.call(makeAnnotations)
 				document.getElementById("next").removeAttribute("hidden");
-				document.getElementById("scene_select").removeAttribute("hidden");
-
 		}
 
 		async function wave_two() {
 			document.getElementById("prev").setAttribute("hidden", "hidden");
 			document.getElementById("next").setAttribute("hidden", "hidden");
-			document.getElementById("scene_select").setAttribute("hidden", "hidden");
 			document.getElementById("year_selected").innerHTML = 1942;
 			slider.value = 1942;
 			for (let i = 0; i <= 34; i++) {
@@ -189,7 +184,6 @@
 			}
 			document.getElementById("next").removeAttribute("hidden");
 			document.getElementById("prev").removeAttribute("hidden");
-			document.getElementById("scene_select").removeAttribute("hidden");
 
 			const annotations = [
 			{
@@ -217,13 +211,11 @@
 				.style('box-shadow', '10px 5px 5px gray')
 				.call(makeAnnotations)
 				document.getElementById("next").removeAttribute("hidden");
-				document.getElementById("scene_select").removeAttribute("hidden");
 		}
 
 		async function wave_three() {
 			document.getElementById("prev").setAttribute("hidden", "hidden");
 			document.getElementById("next").setAttribute("hidden", "hidden");
-			document.getElementById("scene_select").setAttribute("hidden", "hidden");
 			document.getElementById("year_selected").innerHTML = 1977;
 			slider.value = 1977;
 			for (let i = 0; i <= 39; i++) {
@@ -234,7 +226,6 @@
 			}
 			document.getElementById("next").removeAttribute("hidden");
 			document.getElementById("prev").removeAttribute("hidden");
-			document.getElementById("scene_select").removeAttribute("hidden");
 
 			const annotations = [
 			{
@@ -248,7 +239,7 @@
 				radiusPadding: 10   // white space around circle befor connector
 				},
 				color: ["red"],
-				x: 465,
+				x: 463,
 				y: 295,
 				dy: -90,
 				dx: 0
@@ -262,7 +253,6 @@
 				.style('box-shadow', '10px 5px 5px gray')
 				.call(makeAnnotations)
 				document.getElementById("next").removeAttribute("hidden");
-				document.getElementById("scene_select").removeAttribute("hidden");
 		}
 
 		// Update the current slider value (each time you drag the slider handle)
@@ -627,13 +617,7 @@
 				slides[i].style.display = "none";
 			}
 			slides[slideIndex - 1].style.display = "block";
-
-			let dots = document.getElementsByClassName("dot");
-			for (let i = 0; i < dots.length; i++) {
-				dots[i].className = dots[i].className.replace(" active", "");
-			}
-			dots[slideIndex - 1].className += " active";
-        }
+		}
 	</script>
 </body>
 
