Changed annotation color

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				radius: 42,         // circle radius
 				radiusPadding: 10   // white space around circle befor connector
 				},
-				color: ["red"],
+				color: ["black"],
 				x: 190,
 				y: 350,
 				dy: -50,
@@ -196,7 +196,7 @@
 				radius: 55,         // circle radius
 				radiusPadding: 10   // white space around circle befor connector
 				},
-				color: ["red"],
+				color: ["black"],
 				x: 320,
 				y: 300,
 				dy: -50,
@@ -238,7 +238,7 @@
 				radius: 54,         // circle radius
 				radiusPadding: 10   // white space around circle befor connector
 				},
-				color: ["red"],
+				color: ["black"],
 				x: 463,
 				y: 295,
 				dy: -90,
